<resources>
    <string name="app_name">WCCStudentShowcase</string>
    <string name="time_1">12:00</string>
    <string name="time_2">1:00</string>
    <string name="proj_1">Albus\'s Project in Syre 225\ntest\ntest\ntest</string>
    <string name="proj_2">Hermoine\'s Project in Syre 114</string>
    <string name="proj_3">Harry\'s Project in Cascade 112</string>
    <string name="StudentData">titles, names, subj, desc, room
§Transitioning Home – Collectivism v Individualism in Transition from Military to Civilian Life§Kendra Eguia, Monique Everett, Charlie Johnson, Kelly Sorbel§Anthropology 295S Honors Class§The military is a collective culture. Western societies are individualist cultures. The process of entering the military is a process of collectivistic conditioning through a rite of passage – “Boot Camp”; however, at discharge there exists no equivalent process of individualistic conditioning.\nUsing Grounded Theory, a research method of qualitative content data analysis, of our online survey’s written responses, to identify common themes, trends, and emerging patterns, which relate to the individuals’ experiences of transitioning back to civilian life.§
§Mudflat versus Intertidal Species Diversity in Whatcom County§Elmer Ho, Violet Harris, Kaila Cove, Holly Hudgins§Bio 159: Marine Biology§§
§Plankton differences between open ocean and tidepool environments§Lia Dumas, Frankie Biles, Chloe Leisegang, Jessica Watling§Bio 159:Marine Biology§§
§Affect of Human Influence on Biodiversity of Intertidal Systems§Anna Niewendorp, Erin Anderson, Maddie Edwin, Bryonna Yates, Jay Kim§Bio 159: Marine Biology§§
§Changes in Physical Parameters Along an Estuary Gradient§Josh Morris, Julia Gray, Chelsea Robinson, Grayson Harding, Lily Dahmer§Bio 159: Marine Biology§§
§Water Quality Parameters in Marine Systems§Kenny Mendez, Mariah Powell, Kaily Mason§Bio 159: Marine Biology§§
§Humans Threats Facing Marine Biomes Across the Globe§Cierra Diessler§Independent Learning Contract§
§Dirty diatoms: The study of turbidity and plankton in the Salish sea§Aaron Escareno, Jarrett Leake, &amp; Logan Henry§Ocean&amp;101: Oceanography§§
§The history of salinity in the Salish sea§Julia Arnold, Glory Decoteau, Sky Freeman, &amp; Abie Pitton§Ocean&amp;101: Oceanography§§
§Relationship of nitrates and phytoplankton in the Salish Sea§Beck Bock &amp; Jim Johnson§Ocean&amp;101: Oceanography§§
§Macro &amp; microplastics in beaches in the Bellingham Bay§Kate Clark, Kaila Cove, Melanie Daniels, &amp; Lily Hockstedler§Ocean&amp;101: Oceanography§§
§Microfibers in the Salish sea§Julia Gray &amp; Lily Dahmer§Ocean&amp;101: Oceanography§§
§Health of the Salish sea ecosystem§Sam Hogan, Grace Kimbley, &amp; Jessie Villa§Ocean&amp;101: Oceanography§§
§Dissolved oxygen and Salmon health§Blayze Kiefer van der Yacht &amp; Drew Steele§Ocean&amp;101: Oceanography§§
§The relationship between dissolved oxygen and crabs in beaches in Bellingham Bay§Kailani Lauderdale, Tara Lindhout, &amp; Nirmal Nair§Ocean&amp;101: Oceanography§§
§The relationship between pH and Nitrates in the Salish sea§Cassidy Langley &amp; Halle Tjoelker§Ocean&amp;101: Oceanography§§</string>
</resources>
